--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -13,7 +13,7 @@
     <!-- Le styles -->
     <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
         ->prependStylesheet($this->basePath('css/palette.css'))
-        ->prependStylesheet($this->basePath('css/themes/green.css'))
+        ->prependStylesheet($this->basePath('css/palette-theme.css'))
         ->prependStylesheet($this->basePath('css/layout.css'))
         ->prependStylesheet($this->basePath('css/plugins.css'))
         ->prependStylesheet($this->basepath('css/components.css'))
@@ -44,7 +44,7 @@
     <div class="page-header-inner">
         <div class="page-logo">
             <a href="#">
-                <img src="/img/logo_white.png" alt="logo" class="logo-default" width="180"/>
+                <img src="/img/logo-wide.png" alt="logo" class="logo-default" width="180"/>
             </a>
             <div class="menu-toggler sidebar-toggler hide">
             </div>
