--- a/module/Application/view/layout/layout_login.phtml
+++ b/module/Application/view/layout/layout_login.phtml
@@ -12,7 +12,7 @@
     <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
         ->prependStylesheet($this->basePath('css/palette.css'))
         ->prependStylesheet($this->basePath('css/custom.css'))
-        ->prependStylesheet($this->basePath('css/themes/green.css'))
+        ->prependStylesheet($this->basePath('css/palette-theme.css'))
         ->prependStylesheet($this->basePath('css/layout.css'))
         ->prependStylesheet($this->basePath('css/plugins.css'))
         ->prependStylesheet($this->basePath('css/components.css'))
@@ -39,7 +39,7 @@
 
 <div class="logo">
     <a href="#">
-        <img src="/img/logo_white.png" alt=""/>
+        <img src="/img/logo.png" alt=""/>
     </a>
 </div>
 
