--- a/module/Application/view/application/groups/details.phtml
+++ b/module/Application/view/application/groups/details.phtml
@@ -49,7 +49,7 @@ $this->headScript()
                         <tr>
                             <td><?= $employee->getName() . " " . $employee->getSurname(); ?></td>
                             <td><?= $employee->getEmail(); ?></td>
-                            <td><?= $this->BusinessEmployeeStatus($be->getStatus()); ?></td>
+                            <td><?= $this->businessEmployeeStatus($be->getStatus()); ?></td>
                             <td>
                                 <a href="<?= $this->url('groups/details/remove-employee', ['id' => $this->group->getId(), 'employee' => $employee->getId()]); ?>"
                                    onclick="return confirm('<?= $this->translate("Sei sicuro di voler eliminare questo utente?"); ?>')"
