--- a/module/Application/view/partials/employees-table.phtml
+++ b/module/Application/view/partials/employees-table.phtml
@@ -28,7 +28,7 @@
                     <td><?= $employee->getName() . " " . $employee->getSurname(); ?></td>
                     <td><?= $employee->getEmail(); ?></td>
                     <td><?= $groupName ?></td>
-                    <td><?= $this->BusinessEmployeeStatus($be->getStatus()); ?></td>
+                    <td><?= $this->businessEmployeeStatus($be->getStatus()); ?></td>
                     <td>
                         <?php
                         if ($be->isBlocked()) { ?>
