Add business invoices section

--- a/module/Application/view/partials/translations.phtml
+++ b/module/Application/view/partials/translations.phtml
@@ -26,6 +26,12 @@
         'sSortDescending': '<?= $this->translate(': attiva per ordinare la colonna in ordine decrescente') ?>',
         //employees
         'sEmptyEmployeeTable': '<?= $this->translate('Nessun dipendente presente') ?>',
+        //business invoices
+        'showProfileOf': '<?= $this->translate("Prosegui") ?>',
+        'renderFirstPayment': '<?= $this->translate("Iscrizione") ?>',
+        'renderTrip': '<?= $this->translate("Corse") ?>',
+        'renderPenality': '<?= $this->translate("Sanzione") ?>',
+        'renderBonusPackage': '<?= $this->translate("Pacchetto bonus") ?>',
 };
 
     function translate(key) {
