--- a/module/Application/view/application/groups/details.phtml
+++ b/module/Application/view/application/groups/details.phtml
@@ -1,8 +1,8 @@
 <?php
-$this->headLink()->appendStylesheet('/js/datatables/plugins/bootstrap/dataTables.bootstrap.css');
+$this->headLink()->appendStylesheet($this->basePath() .'/js/datatables/plugins/bootstrap/dataTables.bootstrap.css');
 $this->headScript()
-    ->appendFile('/js/datatables/media/js/jquery.dataTables.min.js')
-    ->appendFile('/js/datatables/plugins/bootstrap/dataTables.bootstrap.js')
+    ->appendFile($this->basePath() .'/js/datatables/media/js/jquery.dataTables.min.js')
+    ->appendFile($this->basePath() .'/js/datatables/plugins/bootstrap/dataTables.bootstrap.js')
     ->appendFile($this->basePath() .'/js/group-details.js');
 ?>
 <div class="page-content-wrapper">
@@ -44,7 +44,7 @@ $this->headScript()
                     </tr>
                     </thead>
                     <?php /** @var \BusinessCore\Entity\BusinessEmployee $be */
-                    foreach ($this->group->getBusinessEmployee() as $be):
+                    foreach ($this->group->getBusinessEmployees() as $be):
                         $employee = $be->getEmployee(); ?>
                         <tr>
                             <td><?= $employee->getName() . " " . $employee->getSurname(); ?></td>
