--- a/module/Application/view/application/groups/groups.phtml
+++ b/module/Application/view/application/groups/groups.phtml
@@ -1,8 +1,8 @@
 <?php
-$this->headLink()->appendStylesheet('/js/datatables/plugins/bootstrap/dataTables.bootstrap.css');
+$this->headLink()->appendStylesheet($this->basePath() .'/js/datatables/plugins/bootstrap/dataTables.bootstrap.css');
 $this->headScript()
-    ->appendFile('/js/datatables/media/js/jquery.dataTables.min.js')
-    ->appendFile('/js/datatables/plugins/bootstrap/dataTables.bootstrap.js')
+    ->appendFile($this->basePath() .'/js/datatables/media/js/jquery.dataTables.min.js')
+    ->appendFile($this->basePath() .'/js/datatables/plugins/bootstrap/dataTables.bootstrap.js')
     ->appendFile($this->basePath() .'/js/groups.js');
 ?>
 <div class="page-content-wrapper">
@@ -48,7 +48,7 @@ $this->headScript()
                             <td><?= $group->getId() ?></td>
                             <td><?= $group->getName(); ?></td>
                             <td><?= $group->getDescription(); ?></td>
-                            <td><?= count($group->getBusinessEmployee()) ?></td>
+                            <td><?= count($group->getBusinessEmployees()) ?></td>
                             <td>
                                 <a href="<?= $this->url('groups/details', ['id' => $group->getId()]); ?>"
                                    class="validation-btn btn btn-default btn-xs">
