--- a/module/Application/view/application/time-packages/buy.phtml
+++ b/module/Application/view/application/time-packages/buy.phtml
@@ -17,6 +17,47 @@ $this->headLink()
                 <a href="<?php echo $this->url('time-packages'); ?>" class="btn btn-success pull-right"><i class="fa fa-arrow-left"></i> <?= $this->translate("torna alla lista pacchetti"); ?></a>
             </div>
         </div>
+        <div class="portlet box green">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class="fa fa-cogs"></i><?= $this->translate("Elenco pacchetti acquistabili"); ?>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th><?= $this->translate("Minuti"); ?></th>
+                        <th><?= $this->translate("Descrizione"); ?></th>
+                        <th><?= $this->translate("Costo"); ?></th>
+                        <th><?= $this->translate("Acquista"); ?></th>
+                    </tr>
+                    </thead>
+                    <?php /** @var \BusinessCore\Entity\TimePackage $timePackage */
+                    foreach ($this->packages as $timePackage):
+                        $minutes = $this->translate("%s min.");
+                        $minutes = sprintf($minutes, $timePackage->getMinutes());
+
+                        $description = $this->translate("Pacchetto di %s minuti");
+                        $description = sprintf($description, $timePackage->getMinutes());
+
+                        $cost = number_format($timePackage->getCost() / 100, 2, '.', '') . ' €';
+                        ?>
+                        <tr>
+                            <td><?= $minutes ?></td>
+                            <td><?= $description ?></td>
+                            <td><?= $cost ?></td>
+                            <td>
+                                <a href="<?= $this->url(
+                                    'time-packages/buy', ['id' => $timePackage->getId()]); ?>" class="fa fa-shopping-cart" aria-hidden="true"></a>
+                            </td>
+                        </tr>
+                        <?php
+                    endforeach; ?>
+                </table>
+            </div>
+        </div>
+
         <!-- END PAGE CONTENT-->
     </div>
 </div>
