--- a/module/Application/view/application/time-packages/time-packages.phtml
+++ b/module/Application/view/application/time-packages/time-packages.phtml
@@ -33,13 +33,23 @@ $this->headScript()
                 <table class="table table-striped table-bordered table-hover" id="js-time-packages-table">
                     <thead>
                     <tr>
-                        <th><?= $this->translate("Nome e cognome"); ?></th>
-                        <th><?= $this->translate("Email"); ?></th>
-                        <th><?= $this->translate("Stato"); ?></th>
-                        <th><?= $this->translate("Selezione"); ?></th>
+                        <th><?= $this->translate("Minuti totali"); ?></th>
+                        <th><?= $this->translate("Data acquisto"); ?></th>
+                        <th><?= $this->translate("Minuti residui"); ?></th>
                     </tr>
                     </thead>
+                    <?php /** @var \BusinessCore\Entity\BusinessTimePackage $businessTimePackage */
+                    foreach ($this->business->getBusinessTimePackages() as $businessTimePackage):
+                        $timePackage = $businessTimePackage->getTimePackage()
+                        //@todo calculate residual time?>
 
+                        <tr>
+                            <td><?= $timePackage->getMinutes() ?></td>
+                            <td><?= $businessTimePackage->getInsertedTs()->format("d-m-Y H:i:s"); ?></td>
+                            <td><?= $timePackage->getMinutes() ?></td>
+                        </tr>
+                        <?php
+                    endforeach; ?>
                 </table>
             </div>
         </div>
