Add business payments functions

--- a/module/Application/view/application/payments/payments.phtml
+++ b/module/Application/view/application/payments/payments.phtml
@@ -75,10 +75,10 @@ $this->headScript()
                         <table class="table table-striped table-bordered table-hover" id="js-business-payments-table">
                             <thead>
                             <tr>
-                                <th><?= $this->translate("Data pagamento"); ?></th>
+                                <th><?= $this->translate("Data inserimento"); ?></th>
                                 <th><?= $this->translate("Tipologia"); ?></th>
                                 <th><?= $this->translate("Importo"); ?></th>
-                                <th></th>
+                                <th><?= $this->translate("Stato pagamento"); ?></th>
                             </tr>
                             </thead>
                         </table>
