--- a/module/Application/view/application/payments/payments.phtml
+++ b/module/Application/view/application/payments/payments.phtml
@@ -22,29 +22,33 @@ $this->headScript()
 
                 <?= $this->partial('partials/flash-messages.phtml', []); ?>
 
-                <!-- Filter container -->
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-12">
                         <div class="form-inline">
-
-                            <!-- Filter selector -->
                             <div class="form-group">
                                 <select name="column" id="js-column" class="form-control">
                                     <option value="select" selected>-- <?= $this->translate("Seleziona"); ?> --</option>
+                                    <option value="bp.type"><?= $this->translate("Tipologia"); ?></option>
+
                                 </select>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="value" value="" class="form-control" id="js-value" placeholder="<?= $this->translate("Filtra..."); ?>">
+                                <select name="js-payment-type" id="js-payment-type" class="form-control" style="display: none;">
+                                    <option value="time_package"><?= $this->translate("Pacchetto minuti"); ?></option>
+                                    <option value="trip"><?= $this->translate("Corsa"); ?></option>
+                                </select>
+                                <select name="js-payment-status" id="js-payment-status" class="form-control" style="display: none;">
+                                    <option value="1"><?= $this->translate("Pagato"); ?></option>
+                                    <option value=null><?= $this->translate("Non pagato"); ?></option>
+                                </select>
+                                <input type="text" name="value" value="" class="form-control" id="js-value"
+                                       placeholder="<?= $this->translate("Filtra..."); ?>">
                             </div>
-
-                            <!-- Search buttons -->
                             <div class="btn-group">
-                                <button type="button" class="btn green js-search" id="js-search">
-                                    <i class="fa fa-search"></i> <?= $this->translate("Cerca"); ?>
-                                </button>
-                                <button type="button" class="btn green dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-angle-down"></i>
-                                </button>
+                                <button type="button" class="btn green js-search" id="js-search"><i
+                                        class="fa fa-search"></i> <?= $this->translate("Cerca"); ?></button>
+                                <button type="button" class="btn green dropdown-toggle" data-toggle="dropdown"><i
+                                        class="fa fa-angle-down"></i></button>
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
                                         <a id="js-clear">
@@ -53,8 +57,6 @@ $this->headScript()
                                     </li>
                                 </ul>
                             </div>
-                            <!-- search buttons -->
-
                         </div>
                     </div>
                 </div>
