--- a/module/Application/view/partials/left-menu.phtml
+++ b/module/Application/view/partials/left-menu.phtml
@@ -7,75 +7,70 @@
         </li>
 
         <?php
-        $s_menu = '';
-
-        $i_cnt = 0;
+        $menu = '';
+        $pageCount = 0;
+        /** @var Zend\Navigation\Page\AbstractPage $page */
         foreach ($this->container as $page) {
-
             if ($this->navigation('navigation')->accept($page)) {
-
-                $s_child_menu = '';
-                $b_childActive = false;
+                $childMenu = '';
+                $isChildActive = false;
 
                 if ($page->hasPages()) {
-
-                    $s_child_menu .= '<ul class="sub-menu">';
-
+                    $childMenu .= '<ul class="sub-menu">';
+                    /** @var Zend\Navigation\Page\AbstractPage $child */
                     foreach ($page->getPages() as $child) {
 
-                        if($child->isActive()) {
-                            $b_childActive = true;
+                        if ($child->isActive()) {
+                            $isChildActive = true;
                         }
 
-                        if($child->get('isVisible')) {
+                        if ($child->get('isVisible')) {
 
                             $icon = $child->get('icon');
 
-                            $s_child_menu .= sprintf('<li class="%s"><a href="%s">', $child->isActive() ? 'active' : '', $child->getHref());
+                            $childMenu .= sprintf('<li class="%s"><a href="%s">', $child->isActive() ? 'active' : '', $child->getHref());
 
-                            if(isset($icon)) {
-                                $s_child_menu .= sprintf('<i class="%s"></i>', $icon);
+                            if (isset($icon)) {
+                                $childMenu .= sprintf('<i class="%s"></i>', $icon);
                             }
 
-                            $s_child_menu .= sprintf('%s </a></li>', $this->translate($child->getLabel()));
+                            $childMenu .= sprintf('%s </a></li>', $this->translate($child->getLabel()));
                         }
-
                     }
-
-                    $s_child_menu .= '</ul>';
+                    $childMenu .= '</ul>';
                 }
 
-                if ($i_cnt == 0) {
-                    $s_menu .= sprintf('<li class="%s">', $page->isActive() || $b_childActive ? 'start active open' : 'start ');
+                if ($pageCount == 0) {
+                    $menu .= sprintf('<li class="%s">', $page->isActive() || $isChildActive ? 'start active open' : 'start ');
                 } else {
-                    $s_menu .= sprintf('<li class="%s">', $page->isActive() || $b_childActive ? 'active open' : '');
+                    $menu .= sprintf('<li class="%s">', $page->isActive() || $isChildActive ? 'active open' : '');
                 }
 
                 $isRouteJs = $page->get('isRouteJs');
 
                 if ($page->get('openOnNewWindow')) {
-                    $s_menu .= sprintf('<a href="%s" target="_blank">', isset($isRouteJs) ? 'javascript:;' : $page->getHref());
+                    $menu .= sprintf('<a href="%s" target="_blank">', isset($isRouteJs) ? 'javascript:;' : $page->getHref());
                 } else {
-                    $s_menu .= sprintf('<a href="%s">', isset($isRouteJs) ? 'javascript:;' : $page->getHref());
+                    $menu .= sprintf('<a href="%s">', isset($isRouteJs) ? 'javascript:;' : $page->getHref());
                 }
-                $s_menu .= sprintf('<i class="%s"></i>', $page->get('icon'));
-                $s_menu .= sprintf('<span class="title">%s</span>', $this->translate($page->getLabel()));
+                $menu .= sprintf('<i class="%s"></i>', $page->get('icon'));
+                $menu .= sprintf('<span class="title">%s</span>', $this->translate($page->getLabel()));
 
                 if ($page->hasPages()) {
-                    $s_menu .= sprintf('<span class="arrow %s"></span>', $b_childActive ? 'open' : '');
+                    $menu .= sprintf('<span class="arrow %s"></span>', $isChildActive ? 'open' : '');
                 }
 
-                $s_menu .= '</a>';
+                $menu .= '</a>';
 
-                $s_menu .= $s_child_menu;
+                $menu .= $childMenu;
 
-                $s_menu .= '</li>';
-                $i_cnt++;
+                $menu .= '</li>';
+                $pageCount++;
 
             }
         }
 
-        echo $s_menu;
+        echo $menu;
         ?>
     </ul>
 </div>
