--- a/module/Application/view/application/fares/fares.phtml
+++ b/module/Application/view/application/fares/fares.phtml
@@ -1,8 +1,4 @@
 <?php
-$parkDiscount = $this->businessFare->getParkDiscount();
-$motionDiscount = $this->businessFare->getMotionDiscount();
-$motionCostPerMinute = $this->businessFare->getBaseFare()->getMotionCostPerMinute();
-$parkCostPerMinute = $this->businessFare->getBaseFare()->getParkCostPerMinute();
 ?>
 <div class="page-content-wrapper">
     <div class="page-content">
@@ -18,31 +14,39 @@ $parkCostPerMinute = $this->businessFare->getBaseFare()->getParkCostPerMinute();
                 </div>
             </div>
             <div class="portlet-body">
-                <h3><?= $this->translate("Valido dal: ") . $this->businessFare->getInsertedTs()->format('Y-m-d H:i:s'); ?></h3>
-                <h3><?= $this->translate("Sconto sosta: ") . sprintf("%s%%", $parkDiscount); ?></h3>
-                <h3><?= $this->translate("Sconto corsa: ") . sprintf("%s%%", $motionDiscount) ?></h3>
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th><?= $this->translate('Le tue tariffe') ?></th>
-                        <th><?= $this->translate('Invece di') ?></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td><?= $this->translate('Tariffa base della corsa') ?></td>
-                        <td>€ <?= number_format($motionCostPerMinute / 100 * (1 - $motionDiscount / 100), 2, ',', '.') ?></td>
-                        <td>€ <?= number_format($motionCostPerMinute / 100, 2, ',', '.') ?></td>
-                    <tr>
-                    <tr>
-                        <td><?= $this->translate('Tariffa di sosta') ?></td>
-                        <td>€ <?= number_format($parkCostPerMinute / 100 * (1 - $parkDiscount / 100), 2, ',', '.') ?></td>
-                        <td>€ <?= number_format($parkCostPerMinute / 100, 2, ',', '.') ?></td>
-                    <tr>
+                <?php if ($this->businessFare instanceof \BusinessCore\Entity\BusinessFare) {
+                    $parkDiscount = $this->businessFare->getParkDiscount();
+                    $motionDiscount = $this->businessFare->getMotionDiscount();
+                    $motionCostPerMinute = $this->businessFare->getBaseFareMotionCostPerMinute();
+                    $parkCostPerMinute = $this->businessFare->getBaseFareParkCostPerMinute(); ?>
+                    <h3><?= $this->translate("Valido dal: ") . $this->businessFare->getInsertedTs()->format('Y-m-d H:i:s'); ?></h3>
+                    <h3><?= $this->translate("Sconto sosta: ") . sprintf("%s%%", $parkDiscount); ?></h3>
+                    <h3><?= $this->translate("Sconto corsa: ") . sprintf("%s%%", $motionDiscount) ?></h3>
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th><?= $this->translate('Le tue tariffe') ?></th>
+                            <th><?= $this->translate('Invece di') ?></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td><?= $this->translate('Tariffa base della corsa') ?></td>
+                            <td>€ <?= number_format($motionCostPerMinute / 100 * (1 - $motionDiscount / 100), 2, ',', '.') ?></td>
+                            <td>€ <?= number_format($motionCostPerMinute / 100, 2, ',', '.') ?></td>
+                        <tr>
+                        <tr>
+                            <td><?= $this->translate('Tariffa di sosta') ?></td>
+                            <td>€ <?= number_format($parkCostPerMinute / 100 * (1 - $parkDiscount / 100), 2, ',', '.') ?></td>
+                            <td>€ <?= number_format($parkCostPerMinute / 100, 2, ',', '.') ?></td>
+                        <tr>
 
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
+                <?php } else { ?>
+                    <h3><?= $this->translate("Nessuna tariffia associata")?></h3>
+                <?php } ?>
 
             </div>
         </div>
