Add invoice frequence to dashboard

--- a/module/Application/view/application/employees/employee-detail.phtml
+++ b/module/Application/view/application/employees/employee-detail.phtml
@@ -62,7 +62,7 @@ $employee = $businessEmployee->getEmployee();
                                 <div class="col-sm-6">
                                     <dl class="dl-horizontal">
                                         <dt><?= $this->translate("Stato"); ?></dt>
-                                        <dd><?= $businessEmployee->getStatus(); ?></dd>
+                                        <dd><?= $this->businessEmployeeStatus($businessEmployee->getStatus()); ?></dd>
                                         <dt><?= $this->translate("Data associazione"); ?></dt>
                                         <dd><?= $businessEmployee->getReadableInsertDate(); ?></dd>
                                         <dt><?= $this->translate("Data approvazione"); ?></dt>
