--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -45,9 +45,11 @@ $business = $this->business
                             <dl class="dl-horizontal">
                                 <dt><?= $this->translate("Tipo pagamento"); ?></dt>
                                 <dd><?= $this->ParamsHelper()->displayPaymentType($business) ?></dd>
-                                <dt><?= $this->translate("Frequenza pagamento"); ?></dt>
+                                <dt><?= $this->translate("Freq. pagamento"); ?></dt>
                                 <dd><?= $this->ParamsHelper()->displayPaymentFrequence($business) ?></dd>
-                                <dt><?= $this->translate("Controllo email aziendale"); ?></dt>
+                                <dt><?= $this->translate("Freq. fatturazione"); ?></dt>
+                                <dd><?= $this->ParamsHelper()->displayInvoiceFrequence($business) ?></dd>
+                                <dt><?= $this->translate("Controllo email"); ?></dt>
                                 <dd><?= $business->isBusinessMailControlEnabled() ? $this->translate("Attivo") : $this->translate("Non attivo") ; ?></dd>
                                 <dt><?= $this->translate("Quota d'iscrizione"); ?></dt>
                                 <dd><?= $business->getReadableSubscriptionFee(); ?> €</dd>
